Update FeedDbStorageTest.java