@@ -10,7 +10,9 @@ import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.exception.ValidationNotObjectException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
+
 import java.util.ArrayList;
+
 import ru.yandex.practicum.filmorate.model.Director;
 
 import java.time.LocalDate;
@@ -31,35 +33,16 @@ public class FilmDbStorage extends BaseDbStorage<Film> implements FilmStorage {
     private UserStorage userStorage;
 
     private static final String INSERT_QUERY = "INSERT INTO films (name, description, release_date, duration, rating_id) " + "VALUES (?, ?, ?, ?, ?)";
-    private static final String GET_BY_NAME_QUERY = "SELECT fl.*, rt.name_rating FROM films AS fl " + "LEFT JOIN rating AS rt ON fl.rating_id = rt.rating_id WHERE fl.name = ?";
     private static final String GET_ALL_QUERY = "SELECT fl.*, rt.name_rating FROM films AS fl " + "LEFT JOIN rating AS rt ON fl.rating_id = rt.rating_id;";
     private static final String DELETE_QUERY = "DELETE FROM films WHERE film_id = ?";
     private static final String GET_BY_ID_QUERY = "SELECT fl.*, rt.name_rating FROM films AS fl " + "LEFT JOIN rating AS rt ON fl.rating_id = rt.rating_id WHERE film_id = ?";
     private static final String UPDATE_QUERY = "UPDATE films SET name = ?, description = ?, release_date = ?," + " duration = ?, rating_id = ? WHERE film_id = ?";
     private static final String ADD_LIKE_QUERY = "INSERT INTO liked_film (film_id, user_id) VALUES (?, ?)";
     private static final String DELETE_LIKE_QUERY = "DELETE FROM liked_film WHERE film_id = ? AND user_id = ?";
-    /*private static final String GET_TOP_QUERY = "SELECT fl.film_id, name, description, release_date, " +
-            "duration, fl.rating_id, r.name_rating, COUNT(lf.user_id) AS likes_count " +
-            "FROM liked_film AS lf " +
-            "RIGHT JOIN films AS fl ON lf.film_id = fl.film_id " +
-            "LEFT JOIN rating AS r ON fl.rating_id = r.rating_id " +
-            "GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, fl.duration, fl.rating_id, r.name_rating " +
-            "ORDER BY likes_count DESC, fl.film_id ASC LIMIT ?";*/
-    private static final String GET_TOP_QUERY_BASE =
-            "SELECT fl.film_id, fl.name, fl.description, fl.release_date, " +
-                    "fl.duration, fl.rating_id, r.name_rating, COUNT(lf.user_id) AS likes_count " +
-                    "FROM liked_film AS lf " +
-                    "RIGHT JOIN films AS fl ON lf.film_id = fl.film_id " +
-                    "LEFT JOIN rating AS r ON fl.rating_id = r.rating_id ";
-
-    private static final String GET_TOP_QUERY_TAIL =
-            " GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, " +
-                    "fl.duration, fl.rating_id, r.name_rating " +
-                    "ORDER BY likes_count DESC, fl.film_id ASC LIMIT ?";
-    private static final String GET_TOP_QUERY = "SELECT fl.film_id, name, description, release_date, " + "duration, fl.rating_id, r.name_rating, COUNT(lf.user_id) AS likes_count " + "FROM liked_film AS lf " + "RIGHT JOIN films AS fl ON lf.film_id = fl.film_id " + "LEFT JOIN rating AS r ON fl.rating_id = r.rating_id " + "GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, fl.duration, fl.rating_id, r.name_rating " + "ORDER BY likes_count DESC, fl.film_id ASC LIMIT ?";
+    private static final String GET_TOP_QUERY_BASE = "SELECT fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating, COUNT(lf.user_id) AS likes_count " + "FROM liked_film AS lf " + "RIGHT JOIN films AS fl ON lf.film_id = fl.film_id " + "LEFT JOIN rating AS r ON fl.rating_id = r.rating_id ";
+    private static final String GET_TOP_QUERY_TAIL = " GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating " + "ORDER BY likes_count DESC, fl.film_id ASC LIMIT ?";
     private static final String ADD_GENRE_QUERY = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
     private static final String CHECK_LIKE_BY_IDS_QUERY = "SELECT COUNT(*) FROM liked_film WHERE film_id = ? AND user_id = ?";
-    private static final String CHECK_LIKE_QUERY = "SELECT COUNT(*) FROM liked_film WHERE film_id = ?";
     private static final String ADD_DIRECTOR_QUERY = "INSERT INTO film_directors (film_id, director_id) VALUES (?, ?)";
     private static final String GET_FILM_DIRECTORS_QUERY = "SELECT d.director_id, d.name " + "FROM film_directors fd " + "JOIN directors d ON fd.director_id = d.director_id " + "WHERE fd.film_id = ?";
     private static final String DELETE_FILM_DIRECTORS_QUERY = "DELETE FROM film_directors WHERE film_id = ?";
@@ -68,22 +51,7 @@ public class FilmDbStorage extends BaseDbStorage<Film> implements FilmStorage {
     private static final String SEARCH_BY_TITLE_QUERY = "SELECT fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating, " + "COUNT(DISTINCT lf.user_id) AS likes_count " + "FROM films AS fl " + "LEFT JOIN rating AS r ON fl.rating_id = r.rating_id " + "LEFT JOIN liked_film AS lf ON fl.film_id = lf.film_id " + "WHERE LOWER(fl.name) LIKE LOWER(?) " + "GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating " + "ORDER BY likes_count DESC, fl.film_id ASC";
     private static final String SEARCH_BY_DIRECTOR_QUERY = "SELECT fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating, " + "COUNT(DISTINCT lf.user_id) AS likes_count " + "FROM films AS fl " + "LEFT JOIN rating AS r ON fl.rating_id = r.rating_id " + "LEFT JOIN liked_film AS lf ON fl.film_id = lf.film_id " + "JOIN film_directors AS fd ON fl.film_id = fd.film_id " + "JOIN directors AS d ON fd.director_id = d.director_id " + "WHERE LOWER(d.name) LIKE LOWER(?) " + "GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating " + "ORDER BY likes_count DESC, fl.film_id ASC";
     private static final String SEARCH_BY_TITLE_AND_DIRECTOR_QUERY = "SELECT fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating, " + "COUNT(DISTINCT lf.user_id) AS likes_count " + "FROM films AS fl " + "LEFT JOIN rating AS r ON fl.rating_id = r.rating_id " + "LEFT JOIN liked_film AS lf ON fl.film_id = lf.film_id " + "LEFT JOIN film_directors AS fd ON fl.film_id = fd.film_id " + "LEFT JOIN directors AS d ON fd.director_id = d.director_id " + "WHERE LOWER(fl.name) LIKE LOWER(?) " + "OR LOWER(d.name) LIKE LOWER(?) " + "GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating " + "ORDER BY likes_count DESC, fl.film_id ASC";
-    private static final String GET_COMMON_FILMS_QUERY = "SELECT fl.film_id, fl.name, fl.description, fl.release_date, " +
-            "fl.duration, fl.rating_id, r.name_rating, " +
-            "COUNT(lf.user_id) AS likes_count " +
-            "FROM films fl " +
-            "LEFT JOIN rating r ON fl.rating_id = r.rating_id " +
-            "LEFT JOIN liked_film lf ON fl.film_id = lf.film_id " +
-            "WHERE EXISTS ( " +
-            "    SELECT 1 FROM liked_film lf1 " +
-            "    WHERE lf1.film_id = fl.film_id AND lf1.user_id = ? " +
-            ") AND EXISTS ( " +
-            "    SELECT 1 FROM liked_film lf2 " +
-            "    WHERE lf2.film_id = fl.film_id AND lf2.user_id = ? " +
-            ") " +
-            "GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, " +
-            "fl.duration, fl.rating_id, r.name_rating " +
-            "ORDER BY likes_count DESC, fl.film_id ASC";
+    private static final String GET_COMMON_FILMS_QUERY = "SELECT fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating, " + "COUNT(lf.user_id) AS likes_count " + "FROM films fl " + "LEFT JOIN rating r ON fl.rating_id = r.rating_id " + "LEFT JOIN liked_film lf ON fl.film_id = lf.film_id " + "WHERE EXISTS ( " + "    SELECT 1 FROM liked_film lf1 " + "    WHERE lf1.film_id = fl.film_id AND lf1.user_id = ? " + ") AND EXISTS ( " + "    SELECT 1 FROM liked_film lf2 " + "    WHERE lf2.film_id = fl.film_id AND lf2.user_id = ? " + ") " + "GROUP BY fl.film_id, fl.name, fl.description, fl.release_date, " + "fl.duration, fl.rating_id, r.name_rating " + "ORDER BY likes_count DESC, fl.film_id ASC";
 
     public FilmDbStorage(JdbcTemplate jdbc, RowMapper<Film> rowMapper) {
         super(jdbc, rowMapper);
@@ -174,8 +142,7 @@ public class FilmDbStorage extends BaseDbStorage<Film> implements FilmStorage {
 
     @Override
     public Film getFilmById(long filmId) {
-        Film film = findOne(GET_BY_ID_QUERY, filmId)
-                .orElseThrow(() -> new ValidationNotObjectException("Фильм с id: " + filmId + " не найден"));
+        Film film = findOne(GET_BY_ID_QUERY, filmId).orElseThrow(() -> new ValidationNotObjectException("Фильм с id: " + filmId + " не найден"));
 
         film.setGenres(genreStorage.getFilmIdGenreStorage(filmId));
 
@@ -235,21 +202,14 @@ public class FilmDbStorage extends BaseDbStorage<Film> implements FilmStorage {
         params.add(count);
 
         List<Film> films = findAll(sql.toString(), params.toArray());
-        films.forEach(film -> film.setGenres(genreStorage.getFilmIdGenreStorage(film.getId())));
-        return films;
-    }
-    /*@Override
-    public List<Film> getTopFilms(long count) {
-        List<Film> films = findAll(GET_TOP_QUERY, count);
 
         films.forEach(film -> {
             film.setGenres(genreStorage.getFilmIdGenreStorage(film.getId()));
-
             film.setDirectors(getFilmDirectors(film.getId()));
         });
 
         return films;
-    }*/
+    }
 
     @Override
     public void addGenreFilm(long filmId, long genreId) {
@@ -319,13 +279,7 @@ public class FilmDbStorage extends BaseDbStorage<Film> implements FilmStorage {
 
     @Override
     public List<Film> getFilmsRecommendation(long userId) {
-        return userStorage.recommendationsFilmsId(userId).stream()
-                .map(this::getFilmById)
-                .collect(Collectors.toList());
-    }
-
-    public Optional<Film> getFilmByIdTest(String query, long filmId) {
-        return findOne(query, filmId);
+        return userStorage.recommendationsFilmsId(userId).stream().map(this::getFilmById).collect(Collectors.toList());
     }
 
     private void saveGenres(Long filmId, List<Genre> genres) {
@@ -334,7 +288,7 @@ public class FilmDbStorage extends BaseDbStorage<Film> implements FilmStorage {
         }
         genreStorage.deleteGenreByFilmId(filmId);
 
-        List<Long> uniqueGenreIds = genres.stream().map(Genre::getId).collect(Collectors.toList());
+        List<Long> uniqueGenreIds = genres.stream().map(Genre::getId).toList();
 
         for (Long genreId : uniqueGenreIds) {
             try {
@@ -352,16 +306,6 @@ public class FilmDbStorage extends BaseDbStorage<Film> implements FilmStorage {
         films.forEach(film -> film.setGenres(genreStorage.getFilmIdGenreStorage(film.getId())));
         log.info("Найдено {} общих фильмов у пользователей с id={} и id={}", films.size(), userId, friendId);
         return films;
-    }
-
-    private boolean checkName(String name) {
-        Optional<Film> film = findOne(GET_BY_NAME_QUERY, name);
-        return film.isPresent();
-    }
-
-    private boolean checkLikeId(long filmId) {
-        Integer count = jdbc.queryForObject(CHECK_LIKE_QUERY, Integer.class, filmId);
-        return count != null && count != 0;
     }
 
     private void saveDirectors(Long filmId, List<Director> directors) {
